--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@
 body {
     font-family: 'Open Sans', sans-serif;
 }
+
+/** container **/
+
+.container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.container-center {
+    max-width: 600px;
+    margin: auto;
+}
