--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+
+:root{
+    --primary-color: #22c55e;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
+}
+
+hr {
+    margin: 2rem 0rem;
 }
 
 /** container **/
@@ -15,3 +24,25 @@ body {
     max-width: 600px;
     margin: auto;
 }
+
+/** links **/
+
+.link {
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+}
+
+.link-primary {
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color: white;
+}
+
+.link-secondary {
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 0.5rem;
+}
+
+
+
