--- a/style.css
+++ b/style.css
@@ -45,4 +45,14 @@ hr {
 }
 
 
+/** lists **/
+
+.list-non-bullet {
+    list-style: none;
+}
+ 
+.list-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
+}
 
