--- a/style.css
+++ b/style.css
@@ -61,6 +61,16 @@ hr {
 .navigation {
     background-color: var(--primary-color);
     color: white;
+    padding: 1rem;
+    border-bottom-left-radius: 1rem;
+}
+
+.navigation .nav-brand {
+    font-weight: bold;
+}
+
+.navigation .link-active {
+    font-weight: bold;
 }
 
 .navigation li {
