--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 
 :root{
     --primary-color: #22c55e;
+    --off-white: #f3f4f6;
     --dark-gray: #6b7280;
 }
 
@@ -104,4 +105,22 @@ hr {
     padding: 1rem;
     color: var(--dark-gray);
 
+}
+
+.hero .hero-heading .heading-inverted {
+    color: var(--primary-color);
+}
+
+/** section **/
+
+.section {
+    padding: 2rem;
+}
+
+.section h1 {
+    text-align: center;
+    }
+
+.ow {
+    background-color: var(--off-white);
 }
