--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    margin: 0px;
 }
 
 hr {
@@ -102,6 +103,7 @@ hr {
 }
 
 .hero .hero-heading {
+    text-align: center;
     padding: 1rem;
     color: var(--dark-gray);
 
@@ -123,4 +125,22 @@ hr {
 
 .ow {
     background-color: var(--off-white);
+}
+
+/** footer **/
+
+.footer {
+    background-color: var(--primary-color);
+    padding: 2rem 1rem;
+    text-align: center;
+    color: white;
+    border-top-right-radius: 1rem;
+}
+
+.footer .link {
+    color: white;
+}
+
+.footer ul {
+    padding-inline-start: 0px;
 }
